<resources>

    <string name="app_name">koinBox.</string>
    <string name="forgot">Forgot Password?</string>
    <string name="log">Sign In</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome">Welcome to koinBox</string>
    <string name="personal">Personal</string>
    <string name="register">Register</string>
    <string name="terms">By creating an account, you are indicating that you accept koinBox. </string>
    <string name="TOS">Terms of Service</string>
    <string name="hintUser">Username</string>
    <string name="hintPass">******</string>
    <string name="hintName">Name</string>
    <string name="hintEmail">Email</string>
    <string name="hintPhone">Phone                            optional</string>
    <string name ="age">Age:</string>
    <string name="phrase">Share your world!</string>
    <string name="hintRPass">Re-enter</string>
    <string name="hintSchool">School</string>
    <string name="hintHT">Hometown</string>
    <string name="hintDes">Destination</string>
    <string name="prof">Profile</string>
    <string name="mykoinBox">mykoinBox</string>
    <string name="friends">Friends</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="back">◄Home</string>
    <string name="aboutTitle">About Us</string>
    <string name="LOtext">Are you logging out?</string>
    <string name="bye">Bye!</string>
    <string name="no">NO!</string>
    <string name="aboutInfo">We are a group of Macalester students 
        					who enjoy making mind-blowing apps. 
        					Koinbox is our first app. </string>

	<string name="aboutInfo2">Koinbox connects people from different 
							places together. Our algorithm 
							guarantees that the person you will be 
							connected to will share at least 80% of 
							your interests. </string>
    <string name="copyR">KOINBOX © 2012 GosuNinjas. All rights reserved.</string>
    <string-array name="ages">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>

        

    </string-array>

</resources>