<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20pt" />

    <Button
        android:id="@+id/homeProf"
        android:layout_width="192dp"
        android:layout_height="36dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="39dp"
        android:text="@string/prof" />

    <Button
        android:id="@+id/homemykoin"
        android:layout_width="192dp"
        android:layout_height="36dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="7dp"
        android:text="@string/mykoinBox" />

    <Button
        android:id="@+id/homeFriends"
        android:layout_width="192dp"
        android:layout_height="36dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="7dp"
        android:text="@string/friends" />

    <Button
        android:id="@+id/homeAbout"
        android:layout_width="192dp"
        android:layout_height="36dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="7dp"
        android:text="@string/about" />

    <Button
        android:id="@+id/homeLogout"
        android:layout_width="192dp"
        android:layout_height="36dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="7dp"
        android:text="@string/logout" />

    <TextView
        android:id="@+id/CopyR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="150dp"
        android:text="@string/copyR"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="3pt" />

</LinearLayout>
