<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/background">

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="137dp"
        android:clickable="true"
        android:linksClickable="true"
        android:text="@string/forgot"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:textColor="@color/button"/>

    <Button
        android:id="@+id/log_in"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_above="@+id/forgot_pass"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_marginBottom="46dp"
        android:text="@string/log" 
        android:textSize="13pt"
        android:background="@drawable/round_button"
        android:textColor="@color/white_text"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/log_in"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/hintPass"
        android:inputType="textPassword"
        tools:ignore="ObsoleteLayoutParam" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:ems="10"
        android:inputType="textPersonName"
         android:hint="@string/hintUser"
        tools:ignore="ObsoleteLayoutParam" />

    <TextView
        android:id="@+id/title"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:shadowColor="#67587686"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="3"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="23pt"
        tools:ignore="ObsoleteLayoutParam,HardcodedText" />

</RelativeLayout>
