
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fillViewport="true"
            android:visibility="visible" >
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                
                <TextView
                android:id="@+id/pBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="5pt" />

                <TextView
                    android:id="@+id/pTitle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/prof"
                    android:textSize="15pt"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
           
            
            </LinearLayout>

        </ScrollView>
       	
        <TableRow
            android:id="@+id/LinearLayout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <Button
                android:id="@+id/pProf"
                android:layout_width="95dp"
                android:layout_height="50dp"
                android:layout_marginBottom="-6dp"
                android:layout_marginLeft="-5dp"
                android:text="@string/prof"
                android:textSize="7pt" />

            <Button
                android:id="@+id/pMKB"
                android:layout_width="95dp"
                android:layout_height="50dp"
                android:layout_marginBottom="-6dp"
                android:layout_marginLeft="-6dp"
                android:text="@string/mykoinBox"
                android:textSize="7pt" />

            <Button
                android:id="@+id/pFriends"
                android:layout_width="95dp"
                android:layout_height="50dp"
                android:layout_marginBottom="-6dp"
                android:layout_marginLeft="-6dp"
                android:text="@string/friends"
                android:textSize="7pt" />

            <Button
                android:id="@+id/pLogOut"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="57dp"
                android:layout_height="50dp"
                android:layout_marginBottom="-6dp"
                android:layout_marginLeft="-5dp"
                android:text="@string/logout"
                android:textSize="5pt" />
           
       	</TableRow>

    </RelativeLayout>
